arma-rs/tests/derive/fail_struct_newtype_transparent.stderr
error: #[arma(transparent)] can only be used on map-like structs
 --> tests/derive/fail_struct_newtype_transparent.rs:4:8
  |
4 | #[arma(transparent)]
  |        ^^^^^^^^^^^
