arma-rs/tests/derive/fail_struct_newtype_transparent.rs
use arma_rs_proc::{FromArma, IntoArma};

#[derive(FromArma, IntoArma)]
#[arma(transparent)]
struct DeriveTest(u32);

fn main() {}
